ks_manifest/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: filetransfer
  name: filetransfer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filetransfer
  template:
    metadata:
      labels:
        app: filetransfer
    spec:
      containers:
      - image: danielbeh/filetransfer-cl
        name: filetransfer
        ports:
        - containerPort: 80
          name: filetransfer
